@@ -5,7 +5,7 @@
        provider-name="Libor Zoubek">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
-    <import addon="script.module.stream.resolver" version="1.5.1" />
+    <import addon="script.module.stream.resolver" version="1.5.2" />
   </requires>
   <extension point="xbmc.python.pluginsource"
              provides="video"
